# research

./: .gitignore  .pre-commit-config.yaml  Manifest.toml  Pipfile  Project.toml  notes.tex  preamble.tex  utils.py
.github/ISSUE_TEMPLATE/: Bug_report.md  Custom.md  Feature_request.md
Tanxin/upwind 2d animation/: main.py
common/: pyproject.toml
common/xde/mesh/: base.py  structured.py
common/xde/steppers/: base.py
notes/: background.tex  citations.bib  literature-review.tex  notes.bbl  notes.bbl-SAVE-ERROR  notes.bcf  notes.bcf-SAVE-ERROR  notes.blg  notes.run.xml  notes.tex  preamble.tex  references.bib
python/common/: README.md  pyproject.toml
python/common/src/bcs/: base.py
python/common/src/mesh/: base.py  structured.py
python/common/src/operators/: base.py
python/common/src/solvers/: base.py  explicit.py
report/: citations.bib  fig_1.tex  preamble.tex  report.bbl  report.bcf  report.bcf-SAVE-ERROR  report.blg  report.tex
report/intro/: bloodmodel.tex  continuum.tex  ns.tex  physiology.tex
report/learning/: pinns.tex
report/models/: 0d-models.tex  1d-models.tex
report/prelims/: maths.tex  notation.tex  parameters-units.tex  symbols-abbreviations.tex
scripts/: advection.jl  aq_1D_compliant.jl  aq_compliant.jl  upwind_2d_advection.py
